--- a/build.gradle
+++ b/build.gradle
@@ -8,3 +8,9 @@ dependencies {
   testCompile 'junit:junit:4.12'
   testCompile 'org.hamcrest:hamcrest-all:1.3'
 }
+
+test {
+  testLogging {
+    showStandardStreams = true
+  }
+}
