--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ repositories {
 dependencies {
   testCompile 'junit:junit:4.12'
   testCompile 'org.hamcrest:hamcrest-all:1.3'
+  testCompile 'org.mockito:mockito-core:2.18.3'
 }
 
 test {
