--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ repositories {
 }
 
 dependencies {
+  compile 'org.ow2.sat4j:org.ow2.sat4j.core:2.3.4'
+
   testCompile 'junit:junit:4.12'
   testCompile 'org.hamcrest:hamcrest-all:1.3'
   testCompile 'org.mockito:mockito-core:2.18.3'
