--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'java'
+apply plugin: 'application'
+
+mainClassName = 'com.lastbubble.nikoli.takegaki.Main'
 
 repositories {
   mavenCentral()
@@ -15,5 +18,11 @@ dependencies {
 test {
   testLogging {
     showStandardStreams = true
+  }
+}
+
+run {
+  if (project.hasProperty("appArgs")) {
+    args Eval.me(appArgs)
   }
 }
