--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 apply plugin: 'java'
+apply plugin: 'jacoco'
 apply plugin: 'application'
 
-mainClassName = 'com.lastbubble.nikoli.takegaki.Main'
+mainClassName = 'com.lastbubble.nikoli.Main'
 
 repositories {
   mavenCentral()
