--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
   testCompile 'junit:junit:4.12'
   testCompile 'org.hamcrest:hamcrest-all:1.3'
   testCompile 'org.mockito:mockito-core:2.18.3'
+  testCompile 'co.unruly:java-8-matchers:1.6'
 }
 
 test {
