Upgrade to Gradle 6.0 and resolve warnings

--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,9 @@ test {
 
 jacocoTestReport {
   afterEvaluate {
-    classDirectories = files(classDirectories.files.collect {
+    classDirectories.setFrom(files(classDirectories.files.collect {
       fileTree(dir: it, exclude: 'com/lastbubble/nikoli/Main*')
-    })
+    }))
   }
 }
 
